--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,39 @@
+
 body{
   font-family: arial;
 }
 
-
-
-.center {
-    text-align: center;
-    margin: auto;
-    width: 60%;
-    border: 3px solid blue;
-    padding: 10px;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+#header {
+  background-image: url('../images/sunrise.jpg');
+  height: 100vh;
+  background-size: cover;
+  margin-bottom: 50px;
+}
+
+#header h1 {
+  color: white;
+}
+
+#header h3 {
+  color: white;
+}
+
+
+#content {
+  width: 600px;
+  margin: 0 auto 20px;
+
+}
+
+* {
+  margin: 0px;
+}
+
+
