--- a/styles/main.css
+++ b/styles/main.css
@@ -10,4 +10,14 @@
 
 .box {
   height: 200px;
+  border: 1px solid blue;
+}
+
+.row {
+  border: 1px solid teal;
+}
+
+.text-center {
+  text-align: center;
+  padding-top: 15px;
 }
