--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,3 @@
-
-
 .landing-page {
   background-image: url("../images/sunrise.jpg");
   background-size: cover;
@@ -16,11 +14,6 @@
   text-align: center;
   border: 5px solid white;
   padding-top: 10px;
-}
-
-.landing-page h4 {
-  text-align: center;
-  border: 1px solid red;
 }
 
 .title {
@@ -56,13 +49,14 @@
   border: 1px solid blue;
 }
 
-
 .row {
   border: 1px solid teal;
 }
 
-
 .text-center {
   text-align: center;
+}
+
+.padding {
   padding-top: 15px;
 }
