added dates to blog posts

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,12 @@
   border: 1px solid teal;
 }
 
+.blog-text {
+  padding: 0;
+  margin: 0;
+  text-align: center;
+}
+
 .text-center {
   text-align: center;
 }
