--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,6 @@
 /* Primary Nav Menu */
 
  nav.primary {
-  border: 1px solid orange;
   width: 100%;
   /*text-align: center;*/
   justify-content: center;
@@ -47,13 +46,17 @@ nav.primary ul li a {
 }
 
 nav.primary ul li a:hover {
-  background: rgba(26, 26, 26, 0.5);
+  background: rgba(255, 255, 255, 0.3);
   cursor: pointer;
 }
 
 /* Sub Nav Menu */
 
 nav.primary ul ul {
+  opacity: 0;
+  filter: alpha(opacity=0);
+
+
   position: absolute;
   z-index: 999;
 
@@ -61,9 +64,20 @@ nav.primary ul ul {
   overflow: hidden;
 
   min-width: 100%;
+
+  -webkit-transition: opacity 0.4s ease-out;
+  -moz-transition: opacity 0.4s ease-out;
+  -o-transition: opacity 0.4s ease-out;
+  -ms-transition: opacity 0.4s ease-out;
+  transition: opacity 0.4s ease-out;
+
 }
 
 nav.primary ul li:hover ul {
+  opacity: 10;
+  filter: alpha(opacity=100);
+
+
   height: auto;
   overflow: auto;
 }
@@ -72,7 +86,7 @@ nav.primary ul ul li {
   float: none;
   display: list-item;
   border-bottom: 1px solid white;
-  background-color: rgba(255, 255, 255, 0.5)
+  /*background-color: rgba(255, 255, 255, 0.3)*/
 }
 
 nav.primary ul ul li a {
@@ -81,6 +95,9 @@ nav.primary ul ul li a {
   text-transform: none;
 }
 
+nav.primary ul li:hover > a {
+  background-color: rgba(255, 255, 255, 0.3)
+}
 
 .top {
   align-self: baseline;
@@ -106,7 +123,7 @@ nav.primary ul ul li a {
 
 .header-box p>strong {
   color: white;
-  font-size: 2em;
+  font-size: 1.7em;
   text-transform: uppercase;
 }
 
