--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,5 @@
+/* +++++ INDEX.HTML STYLING ++++++ */
+
 /* Landing Page */
 
 .landing-page {
@@ -179,6 +181,19 @@ section .section-heading a:hover {
   cursor: default;
 }
 
+/* +++++ BLOG STYLING ++++++ */
+
+.blog-img-heading {
+  background-image: url("../images/sunrise_for_blog.jpg");
+  background-size: cover;
+  height: 250px;
+}
+
+.blog-title {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
 
 
 
