--- a/styles/main.css
+++ b/styles/main.css
@@ -181,6 +181,16 @@ section .section-heading a:hover {
   cursor: default;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+}
+
+
 /* +++++ BLOG STYLING ++++++ */
 
 .blog-img-heading {
