--- a/styles/main.css
+++ b/styles/main.css
@@ -5,9 +5,9 @@
 .landing-page {
   /*background-image: url("../images/sunrise.jpg");*/
   background: linear-gradient(
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 0, 0, 0.6)
-    ), url("../images/waves.jpg");
+      rgba(0, 0, 0, 0.0),
+      rgba(0, 0, 0, 0.0)
+    ), url("../images/waterfall.jpg");
   background-size: cover;
   height: 100vh;
   display: flex;
@@ -126,24 +126,25 @@ nav.primary ul li:hover > a {
   border: 5px solid white;
   padding-top: 20px;
   margin-top: 15%;
-  background-color: rgba(255, 255, 255, 0.2)
+  background-color: rgba(0, 0, 0, 0.6)
 }
 
 .header-box p>em {
   color: white;
-  font-size: 2em;
-  font-family: 'Courgette', cursive;
+  font-size: 130%;
+  /*font-family: 'Courgette', cursive;*/
+  font-family: 'Arapey', serif;
 }
 
 .header-box p>strong {
   color: white;
-  font-size: 2em;
+  font-size: 130%;
   text-transform: uppercase;
 }
 
 .header-box p {
   color: white;
-  font-size: 1em;
+  font-size: 130%;
 }
 
 /* Section Title Formatting */
@@ -224,17 +225,16 @@ a:hover {
 /* +++++ BLOG STYLING ++++++ */
 
 .blog-img-heading {
-  background-image: url("../images/sunrise_for_blog.jpg");
+  background-image: url("../images/waterfall.jpg");
   background-size: cover;
   height: 250px;
 }
 
 .blog-title {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 15px;
+  padding: 0px;
+  margin: 5px;
 }
-
 
 .rotate {
   transform: rotate(90deg);
@@ -253,6 +253,12 @@ a:hover {
   width: 100%;
 }
 
+.grey-background {
+  background-color: #d3d3d3;
+  height: 100%;
+}
 
 
-
+.center {
+  text-align: center;
+}
