--- a/styles/main.css
+++ b/styles/main.css
@@ -146,15 +146,10 @@ nav.primary ul li:hover > a {
   color: white;
   font-size: 130%;
 }
-
 /* Section Title Formatting */
 
-
 /* Photo Formatting */
-.main-photo {
-  height: 100%;
-  width: 100%;
-}
+
 
 .circular {
   border-radius: 50%;
@@ -163,12 +158,10 @@ nav.primary ul li:hover > a {
   overflow: hidden;
 }
 
-/*.circular {
-  height: 500px;
-  width: 500px;
-  border-radius: 250px;
-  background: url("../images/Gaza.JPG") no-repeat;
-}*/
+.profile-image {
+  height: 100%;
+  width: 100%;
+}
 
 /* Blog Entry Formatting */
 
@@ -258,7 +251,44 @@ a:hover {
   height: 100%;
 }
 
-
 .center {
   text-align: center;
+}
+
+.padding-top {
+  padding-top: 30px;
+}
+
+.circleBase {
+    border-radius: 50%;
+    behavior: url(PIE.htc); /* remove if you don't care about IE8 */
+    margin: 0 auto;
+    /*background: url("../images/Gaza.JPG")*/
+}
+
+.type1 {
+    width: 100px;
+    height: 100px;
+    /*background: yellow;*/
+    border: 3px solid red;
+}
+.type2 {
+    width: 50px;
+    height: 50px;
+    background: #ccc;
+    border: 3px solid #000;
+}
+.type3 {
+    width: 500px;
+    height: 500px;
+    background: aqua;
+    border: 30px solid blue;
+}
+
+.image-holder {
+  border: 1px solid red;
+  height: 500px;
+  width: 500px; 
+  margin: 0 auto;
+  border-radius: 50%;
 }
