--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
   background: linear-gradient(
       rgba(0, 0, 0, 0.0),
       rgba(0, 0, 0, 0.0)
-    ), url("../images/waterfall.jpg");
+    ), url("../images/forrest-waterfall.jpg");
   background-size: cover;
   height: 100vh;
   display: flex;
@@ -108,9 +108,9 @@ nav.primary ul li:hover > a {
   text-align: center;
   line-height: 28px;
   border: 5px solid white;
-  padding-top: 20px;
-  margin-top: 15%;
-  background-color: rgba(0, 0, 0, 0.6)
+  padding-top: 30px;
+  margin-top: 20%;
+  background-color: rgba(0, 0, 0, 0.5)
 }
 
 .header-box p>em {
@@ -149,8 +149,7 @@ nav.primary ul li:hover > a {
 /* Blog Entry Formatting */
 
 .blog-image {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
 }
 
 .blog-text {
@@ -271,7 +270,7 @@ a:hover {
 .image-holder {
   border: 1px solid red;
   height: 500px;
-  width: 500px; 
+  width: 500px;
   margin: 0 auto;
   border-radius: 50%;
 }
@@ -298,10 +297,10 @@ a:hover {
   padding-bottom: 30px;
 }
 
-/* +++++++++++++ CSS FOR BLOG HOMEPAGE ++++++++++++++++ */ 
+/* +++++++++++++ CSS FOR BLOG HOMEPAGE ++++++++++++++++ */
 
 
 
 
 
-/* +++++++++++++ END OF CSS FOR BLOG HOMEPAGE ++++++++++++++++ */ 
+/* +++++++++++++ END OF CSS FOR BLOG HOMEPAGE ++++++++++++++++ */
