--- a/styles/main.css
+++ b/styles/main.css
@@ -223,12 +223,13 @@ font-size: 130%;
   background-color: rgba(0, 0, 0, 0.2);
   //background-color: rgba(0, 0, 0, 0.4);
   }
-  .header-box p>em {
+
+  #passion {
   color: white;
-  font-size: 170%;
+  font-size: 100%;
   //font-weight: bold;
   /*font-family: 'Courgette', cursive;*/
-  font-family: 'Arapey', serif;
+  //font-family: 'Arapey', serif;
   }
 
   .header-box h5>strong {
@@ -248,7 +249,7 @@ font-size: 130%;
 @media (min-width: 1200px) {
   .header-box {
   width: 45%;
-  color: white;
+  color: red;
   text-align: center;
   line-height: 28px;
   border: 5px solid white;
@@ -257,24 +258,33 @@ font-size: 130%;
   background-color: rgba(0, 0, 0, 0.2);
   //background-color: rgba(0, 0, 0, 0.4);
   }
-  .header-box p>em {
+
+  #passion {
   color: white;
-  font-size: 180%;
+  font-size: 200%;
+  font-weight: bold;
+  text-transform: uppercase;
+  //font-style: italic;
+
   //font-weight: bold;
   /*font-family: 'Courgette', cursive;*/
-  font-family: 'Arapey', serif;
+  //font-family: 'Arapey', serif;
   }
 
   .header-box h5>strong {
   color: white;
+  letter-spacing: 0.02em;
   //font-size: 100%;
   font-size: 200%;
   text-transform: uppercase;
   }
 
-  .header-box p {
+  #training {
   color: white;
-  font-size: 150%;
+  font-size: 200%;
+  font-weight: bold;
+  //text-transform: uppercase;
+  //font-style: italic;
   }
 }
 
@@ -350,7 +360,7 @@ a:hover {
 /* +++++ BLOG STYLING ++++++ */
 
 .blog-img-heading {
-  background-image: url("../images/waterfall.jpg");
+  background-image: url("../images/forrest-waterfall-blog.jpg");
   background-size: cover;
   height: 250px;
 }
