reverted to previous version, added C7

--- a/styles/main.css
+++ b/styles/main.css
@@ -350,7 +350,7 @@ a:hover {
 /* +++++ BLOG STYLING ++++++ */
 
 .blog-img-heading {
-  background-image: url("../images/waterfall.jpg");
+  background-image: url("../images/forrest-waterfall-blog.jpg");
   background-size: cover;
   height: 250px;
 }
