--- a/styles/main.css
+++ b/styles/main.css
@@ -107,7 +107,7 @@ nav.primary ul li:hover > a {
   //color: white;
   text-align: center;
   line-height: 28px;
-  border: 2px solid white;
+  border: 3px solid white;
   padding: 0px;
   margin-top: 20%;
   background-color: rgba(0, 0, 0, 0.2);
@@ -144,42 +144,42 @@ margin-bottom: 15px;
 }
 
 /* Larger than mobile */
-@media (min-width: 400px) {
+//@media (min-width: 400px) {
   /* Header Box */
 
-  .header-box {
-    width: 70%;
-    color: white;
-    text-align: center;
-    line-height: 28px;
-    border: 5px solid white;
-    padding-top: 30px;
-    margin-top: 20%;
-    background-color: rgba(0, 0, 0, 0.2);
-    //background-color: rgba(0, 0, 0, 0.4);
-  }
+//   .header-box {
+//     width: 70%;
+//     color: white;
+//     text-align: center;
+//     line-height: 28px;
+//     border: 5px solid white;
+//     padding-top: 30px;
+//     margin-top: 20%;
+//     background-color: rgba(0, 0, 0, 0.2);
+//     //background-color: rgba(0, 0, 0, 0.4);
+//   }
 
-  .header-box p>em {
-  color: white;
-  font-size: 160%;
-  //font-weight: bold;
-  /*font-family: 'Courgette', cursive;*/
-  font-family: 'Arapey', serif;
-  }
+//   .header-box p>em {
+//   color: white;
+//   font-size: 160%;
+//   //font-weight: bold;
+//   /*font-family: 'Courgette', cursive;*/
+//   font-family: 'Arapey', serif;
+//   }
 
-  .header-box h5>strong {
-  color: white;
-  //font-size: 100%;
-  //font-size:200;
-  font-size: 200%;
-  text-transform: uppercase;
-  }
+//   .header-box h5>strong {
+//   color: white;
+//   //font-size: 100%;
+//   //font-size:200;
+//   font-size: 200%;
+//   text-transform: uppercase;
+//   }
 
-  .header-box p {
-  color: white;
-  font-size: 140%;
-  }
-}
+//   .header-box p {
+//   color: white;
+//   font-size: 140%;
+//   }
+// }
 
 /* Larger than phablet */
 // @media (min-width: 550px) {}
@@ -187,112 +187,133 @@ margin-bottom: 15px;
 /* Larger than tablet */
 @media (min-width: 750px) {
   .header-box {
-  width: 40%;
-  color: white;
-  text-align: center;
-  line-height: 28px;
-  border: 5px solid white;
-  padding-top: 30px;
-  margin-top: 20%;
-  background-color: rgba(0, 0, 0, 0.2);
-  //background-color: rgba(0, 0, 0, 0.4);
+    width: 40%;
+    //color: white;
+    text-align: center;
+    line-height: 28px;
+    border: 4px solid white;
+    padding: 0px;
+    margin-top: 20%;
+    background-color: rgba(0, 0, 0, 0.2);
+    //background-color: rgba(0, 0, 0, 0.4);
   }
-  .header-box p>em {
+
+  #passion {
   color: white;
-  font-size: 150%;
+  font-size: 200%;
   //font-weight: bold;
   /*font-family: 'Courgette', cursive;*/
   font-family: 'Arapey', serif;
+  //font-style: italic;
+  margin-top: 10px;
+  margin-bottom: 10px;
   }
 
-  .header-box h5>strong {
+  #developer {
   color: white;
   //font-size: 100%;
+  //font-size:200;
   font-size: 200%;
   text-transform: uppercase;
+  margin: 0;
   }
 
-  .header-box p {
+  #training {
   color: white;
-  font-size: 130%;
+  font-size: 200%;
+  font-family: 'Arapey', serif;
+  //font-style: italic;
+  margin-top: 10px;
+  margin-bottom: 15px;
   }
 }
 
 /* Larger than desktop */
 @media (min-width: 1000px) {
   .header-box {
-  width: 40%;
-  color: white;
-  text-align: center;
-  line-height: 28px;
-  border: 5px solid white;
-  padding-top: 30px;
-  margin-top: 20%;
-  background-color: rgba(0, 0, 0, 0.2);
-  //background-color: rgba(0, 0, 0, 0.4);
+    width: 30%;
+    //color: white;
+    text-align: center;
+    line-height: 28px;
+    border: 4px solid white;
+    padding: 0px;
+    margin-top: 20%;
+    background-color: rgba(0, 0, 0, 0.2);
+    //background-color: rgba(0, 0, 0, 0.4);
   }
 
   #passion {
-  color: white;
-  font-size: 100%;
-  //font-weight: bold;
-  /*font-family: 'Courgette', cursive;*/
-  //font-family: 'Arapey', serif;
+    color: white;
+    font-size: 300%;
+    //font-weight: bold;
+    /*font-family: 'Courgette', cursive;*/
+    font-family: 'Arapey', serif;
+    //font-style: italic;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 
-  .header-box h5>strong {
-  color: white;
-  //font-size: 100%;
-  font-size: 200%;
-  text-transform: uppercase;
-  }
-
-  .header-box p {
-  color: white;
-  font-size: 130%;
-  }
-}
-
-/* Larger than Desktop HD */
-@media (min-width: 1200px) {
-  .header-box {
-  width: 45%;
-  color: red;
-  text-align: center;
-  line-height: 28px;
-  border: 5px solid white;
-  padding-top: 30px;
-  margin-top: 20%;
-  background-color: rgba(0, 0, 0, 0.2);
-  //background-color: rgba(0, 0, 0, 0.4);
-  }
-
-  #passion {
-  color: white;
-  font-size: 200%;
-  font-weight: bold;
-  text-transform: uppercase;
-  //font-style: italic;
-
-  //font-weight: bold;
-  /*font-family: 'Courgette', cursive;*/
-  //font-family: 'Arapey', serif;
-  }
-
-  .header-box h5>strong {
-  color: white;
-  letter-spacing: 0.02em;
-  //font-size: 100%;
-  font-size: 200%;
-  text-transform: uppercase;
+  #developer {
+    color: white;
+    //font-size: 100%;
+    //font-size:200;
+    font-size: 300%;
+    text-transform: uppercase;
+    margin: 0;
   }
 
   #training {
-  color: white;
-  font-size: 200%;
-  font-weight: bold;
-  //text-transform: uppercase;
-  //font-style: italic;
+    color: white;
+    font-size: 300%;
+    font-family: 'Arapey', serif;
+    //font-style: italic;
+    margin-top: 20px;
+    margin-bottom: 30px;
+  }
+}
+
+// /* Larger than Desktop HD */
+@media (min-width: 1200px) {
+
+  .header-box {
+    width: 40%;
+    //color: white;
+    text-align: center;
+    line-height: 28px;
+    border: 4px solid white;
+    padding: 0px;
+    margin-top: 20%;
+    background-color: rgba(0, 0, 0, 0.9);
+    //background-color: rgba(0, 0, 0, 0.4);
+  }
+
+  #passion {
+    color: red;
+    font-size: 250%;
+    //font-weight: bold;
+    /*font-family: 'Courgette', cursive;*/
+    font-family: 'Arapey', serif;
+    //font-style: italic;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  #developer {
+    color: red;
+    //font-size: 100%;
+    //font-size:200;
+    font-size: 300%;
+    text-transform: uppercase;
+    margin: 0;
+  }
+
+  #training {
+    color: white;
+    font-size: 250%;
+    font-family: 'Arapey', serif;
+    //font-style: italic;
+    margin-top: 10px;
+    margin-bottom: 15px;
   }
 }
 
