--- a/styles/main.css
+++ b/styles/main.css
@@ -14,10 +14,10 @@
 // }
 
 .nav-box{
-  height: 8vh;
+  //height: 7vh;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
 }
 
 nav.primary ul,
@@ -37,7 +37,7 @@ nav.primary ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  font-size: 120%;
+  //font-size: 120%;
   letter-spacing: 0.08em;
   padding: 0 14px;
 }
@@ -105,23 +105,23 @@ nav.primary ul li:hover > a {
   background: linear-gradient(
       rgba(0, 0, 0, 0.0),
       rgba(0, 0, 0, 0.0)
-    ), url("../images/josh-bw.jpg");
+    ), url("../public/images/workstation/laptop.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 80vh;
+  height: 93vh;
 }
 
-#top-box {
-  height: 50%;
-  display: flex;
-  align-items: flex-end;
+#box {
+  //height: 93vh;
+  border: 1px solid white;
 }
 
-#top-text-container {
+#text-container {
+  border: 1px solid blue;
+  margin-left: 52%;
+  margin-right: 10%;
+  margin-top: 10%;
   text-align: center;
-  background-color: hsl(210, 100%, 50%);
-  opacity: 0.5;
-  margin-left: 60%
 }
 
 #name {
@@ -133,16 +133,16 @@ nav.primary ul li:hover > a {
 }
 
 #developer {
-  font-weight: bold;
+  //font-weight: bold;
   color: white;
   font-size: 220%;
   margin-bottom: 0;
-  padding-left: 10px;
-  padding-right: 10px;
+  //padding-left: 10px;
+  //padding-right: 10px;
 }
 
 #training {
-  font-weight: bold;
+  //font-weight: bold;
   color: white;
   font-size: 200%;
   margin-bottom: 0;
