--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@
 // }
 
 .nav-box{
-  height: 8vh;
+  height: 7vh;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -37,7 +37,6 @@ nav.primary ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
-  font-size: 120%;
   letter-spacing: 0.08em;
   padding: 0 14px;
 }
@@ -104,24 +103,28 @@ nav.primary ul li:hover > a {
 #landing-page {
   background: linear-gradient(
       rgba(0, 0, 0, 0.0),
-      rgba(0, 0, 0, 0.0)
-    ), url("../images/josh-bw.jpg");
+      rgba(0, 0, 0, 0.2)
+    ), url("../public/images/workstation/laptop_and_pad.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  height: 80vh;
+  height: 93vh;
 }
 
 #top-box {
-  height: 50%;
+  //border: 1px solid red;
+  height: 100%;
   display: flex;
-  align-items: flex-end;
+  justify-content: center;
+  //align-items: center;
 }
 
 #top-text-container {
   text-align: center;
-  background-color: hsl(210, 100%, 50%);
-  opacity: 0.5;
-  margin-left: 60%
+  //background-color: hsl(210, 100%, 50%);
+  //opacity: 0.5;
+  width: 30.6666666667%;
+  margin-top: 10%;
+  //margin-top: 5%;
 }
 
 #name {
@@ -133,16 +136,14 @@ nav.primary ul li:hover > a {
 }
 
 #developer {
-  font-weight: bold;
+  //font-weight: bold;
   color: white;
   font-size: 220%;
   margin-bottom: 0;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 #training {
-  font-weight: bold;
+  //font-weight: bold;
   color: white;
   font-size: 200%;
   margin-bottom: 0;
