--- a/styles/main.css
+++ b/styles/main.css
@@ -388,4 +388,37 @@ a:hover {
 
 }
 
+.main-button {
+    color: white;
+    background-color: hsl(26, 5%, 29%);
+    border-color: hsl(26, 5%, 29%);
+}
+
+.alt-button {
+  color: white;
+  border-width: 2.5px;
+  border-color: white;
+  margin-top: 15%;
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
+.alt-button:hover {
+  background-color: white;
+}
+
+/*.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  color: #333;
+  border-color: #888;
+  outline: 0; }*/
+
 /* +++++++++++++ END OF CSS FOR BLOG HOMEPAGE ++++++++++++++++
